# p6-xml-schema-parser

./: .gitignore  LICENSE  README.md  p6schema.py  p6schema_mcp.py  pyproject.toml
schemas/: eppm_20_12_schema.xml  eppm_23_04_schema.xml  eppm_23_10_schema.xml  eppm_24_12_schema.xml  eppm_25_04_schema.xml  ppm_21_12_schema.xml  ppm_22_12_schema.xml  ppm_23_04_schema.xml
